Added the Usersetup42 to platform.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,6 @@ lib_deps =
 	painlessmesh/painlessMesh@^1.5.0
 
 upload_speed = 200000
+build_flags=
+	-D USER_SETUP_LOADED=1
+	-include $PROJECT_LIBDEPS_DIR/$PIOENV/TFT_eSPI/User_Setups/Setup42_ILI9341_ESP32.h
